Updated mail.ts, Contact Page
